Project simple_bank{
    database_type: 'PostgreSQL'
    Note: '''
    #Simple Bank Database 
    '''
}


Table users as U{
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique,not null]
  password_changed_at timestamptz [not null,default:'0001-01-01 00:00:00Z']
  created_at timestamptz [not null ,default:`now()`]

}

Table account as A {
  id bigserial [pk]
  owner varchar [ref:> U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null ,default:`now()`]
  Indexes{
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [primary key]
  account_id bigint [ref: > A.id]
  amount bigint [not null, note:"can be positive and negative"]
  created_at timestamptz [not null, default:`now()`]
  Indexes{
    account_id
  }
}

Table transfers {
  id bigserial [primary key]
  from_account_id bigint [ref: > A.id]
  to_account_id bigint [ref: > A.id]
  amount bigint [not null,note:"can only hold positive values"]
  created_at timestamptz [not null, default:`now()`]
  Indexes{
    from_account_id
    to_account_id
    (from_account_id,to_account_id)
  }
  }



